--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     volumes:
       # Serve app folder to the server
       - ./app/php:/var/www/html/
+      - ./Docker/Dockerfiles/apache/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
   mysql:
     image: mysql:latest
