--- a/Docker/Dockerfiles/apache/Dockerfile
+++ b/Docker/Dockerfiles/apache/Dockerfile
@@ -2,7 +2,7 @@ FROM php:8.0-apache
 
 RUN apt-get update && apt-get install -y \
     # Install Git
-    git \
+    # git \
     \
     # Enable htaccess
     && a2enmod ssl expires headers rewrite \
