--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
+    "Build & Up": "npm run Build && npm run Up",
+    "Up": "docker compose up",
+    "Build": "docker compose build",
     "Docker Compose Up": "docker compose up --force-recreate",
     "Docker Compose Build": "docker compose build --no-cache"
   }
