--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   #   container_name: Node.js
   #   restart: always
   #   build:
-  #     context: ./Docker/Dockerfiles/node.js
+  #     context: ./docker/node.js
   #     dockerfile: Dockerfile
   #   ports:
   #     - 3000:3000
@@ -15,19 +15,33 @@ services:
   #     - ./app/node.js:/app
   #   tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
 
+  # ubuntu:
+  #   tty: true
+  #   container_name: Ubuntu
+  #   restart: always
+  #   build:
+  #     context: ./docker/nginx
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 80:80
+  #     - 3000:3000
+  #   volumes:
+  #     # Serve app folder to the server
+  #     - ./app/php:/var/www/html
+  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+
   php:
-    # image: php:8.0-apache
     container_name: PHP-Apache
     restart: always
     build:
-      context: ./Docker/Dockerfiles/apache
+      context: ./docker/apache
       dockerfile: Dockerfile
     ports:
       - 80:80
     volumes:
       # Serve app folder to the server
       - ./app/php:/var/www/html/
-      - ./Docker/Dockerfiles/apache/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+      - ./docker/apache/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
   mysql:
     image: mysql:latest
@@ -36,7 +50,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      # - ./Docker/mysql/data:/var/lib/mysql
+      # - ./data/mysql:/var/lib/mysql
       - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "no"
@@ -49,7 +63,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      # - ./Docker/postgres/data:/var/lib/postgresql/data
+      # - ./data/postgres:/var/lib/postgresql/data
       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
     environment:
       POSTGRES_USER: root
@@ -86,7 +100,7 @@ volumes:
     #   image: alpine
     #   container_name: Git
     #   build:
-    #     context: ./Docker/Dockerfiles/git
+    #     context: ./docker/git
     #     dockerfile: Dockerfile
     #   command: tail -F anything
     #   volumes:
