--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -4,6 +4,8 @@ server {
     server_name  localhost;
 
     root   /var/www/html;
+    
+    # Order matters. Priority is from left to right
     index index.php index.html index.htm;
     
     #access_log  /var/log/nginx/host.access.log  main;
