--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,26 +23,26 @@ services:
       context: ./docker/nginx
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - 81:81
       - 3000:3000
     volumes:
       # Serve app folder to the server
       - ./app/php:/var/www/html
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      # - ./docker/apache/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
-  # php:
-  #   container_name: PHP-Apache
-  #   restart: always
-  #   build:
-  #     context: ./docker/apache
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 80:80
-  #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/php:/var/www/html/
-  #     - ./docker/apache/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+  php:
+    container_name: PHP-Apache
+    restart: always
+    build:
+      context: ./docker/apache
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    volumes:
+      # Serve app folder to the server
+      - ./app/php:/var/www/html/
+      - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
   mysql:
     image: mysql:latest
