--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,6 +1,8 @@
 server {
+    # Nginx port
     listen       81;
     listen  [::]:81;
+    
     server_name  localhost;
 
     root   /var/www/html;
