--- a/docker/php/overrides.ini
+++ b/docker/php/overrides.ini
@@ -1,30 +1,42 @@
-# See link for more security best practices
-# https://www.cyberciti.biz/tips/php-security-best-practices-tutorial.html
+; See link for more security best practices
+; https://www.cyberciti.biz/tips/php-security-best-practices-tutorial.html
+
+;====================
+; Stable
 date.timezone = "Asia/Manila"
-post_max_size =  1M
-file_uploads = on
+post_max_size =  200M
+max_file_uploads =  200M
+upload_max_filesize =  2000M
+max_execution_time = 200
+max_input_time = 200
+;====================
 
+; ;========================================
+; date.timezone = "Asia/Manila"
+; post_max_size =  1M
+; file_uploads = on
 
-enable_dl = on
+; enable_dl = on
 
-# Development
-# display_errors = on
-# display_startup_errors = on
+; ; Production
+; open_basedir = "/var/www/html/"
+; session.save_path="/var/lib/php/sessions"
+; upload_tmp_dir = "/var/lib/php/sessions"
+; cgi.force_redirect = on
+; display_errors = off
+; display_startup_errors = off
+; expose_php = off
+; allow_url_fopen = off
+; allow_url_include = off
+; magic_quotes_gpc = off
+; max_file_uploads =  1M
+; upload_max_filesize =  1M
+; max_execution_time = 30
+; max_input_time = 30
+; memory_limit = 40M
+; disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source
 
-# Production
-open_basedir = "/var/www/html/"
-session.save_path="/var/lib/php/sessions"
-upload_tmp_dir = "/var/lib/php/sessions"
-cgi.force_redirect = on
-display_errors = off
-display_startup_errors = off
-expose_php = off
-allow_url_fopen = off
-allow_url_include = off
-magic_quotes_gpc = off
-max_file_uploads =  1M
-upload_max_filesize =  1M
-max_execution_time = 30
-max_input_time = 30
-memory_limit = 40M
-disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source
+; ; Development
+; display_errors = on
+; display_startup_errors = on
+; ;========================================
