--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,25 @@ services:
   #     - ./app/node.js:/app
   #   tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
 
+  # Spring Boot
+  # java:
+  #   image: maven:3.8.5-jdk-8
+  #   container_name: Java-Maven
+  #   ports:
+  #     - 8080:8080
+  #   volumes:
+  #     - ./app/java/test:/usr/local/bin
+  #     - ./app/java/test/entrypoint.sh:/usr/local/bin/mvn-entrypoint.sh
+  #
+  #====================
+  # entrypoint.sh
+  # #!/bin/sh
+  # You can set here anything you need before starting the spring boot application
+  # cd /usr/local/bin
+  # mvn install
+  # mvn spring-boot:run
+  #====================
+
   ubuntu:
     tty: true
     container_name: Ubuntu
