--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 
 services:
   # node.js:
@@ -41,35 +41,35 @@ services:
   #   ports:
   #     - 8080:8080
 
-  ubuntu:
-    tty: true
-    container_name: Ubuntu
-    restart: always
-    build:
-      context: ./docker/nginx
-      dockerfile: Dockerfile
-    ports:
-      - 81:81
-      - 3000:3000
-      - 3306:3306
-    volumes:
-      # Serve app folder to the server
-      - ./app/php:/var/www/html
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  # ubuntu:
+  #   tty: true
+  #   container_name: Ubuntu
+  #   restart: always
+  #   build:
+  #     context: ./docker/nginx
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 81:81
+  #     - 3000:3000
+  #     - 3306:3306
+  #   volumes:
+  #     # Serve app folder to the server
+  #     - ./app/php:/var/www/html
+  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
-  php:
-    container_name: PHP-Apache
-    restart: always
-    build:
-      context: ./docker/apache
-      dockerfile: Dockerfile
-    ports:
-      - 80:80
-    volumes:
-      # Serve app folder to the server
-      - ./app/php:/var/www/html/
-      - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+  # php:
+  #   container_name: PHP-Apache
+  #   restart: always
+  #   build:
+  #     context: ./docker/apache
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 80:80
+  #   volumes:
+  #     # Serve app folder to the server
+  #     - ./app/php:/var/www/html/
+  #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
   mysql:
     image: mysql:latest
@@ -97,28 +97,28 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: "123"
 
-  adminer:
-    image: adminer
-    container_name: Adminer
-    restart: always
-    ports:
-      - 8080:8080
-    depends_on:
-      - MySQL
-      - PostgreSQL
+  # adminer:
+  #   image: adminer
+  #   container_name: Adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
+  #   depends_on:
+  #     - MySQL
+  #     - PostgreSQL
 
-  phpmyadmin:
-    image: phpmyadmin
-    container_name: phpMyAdmin
-    restart: always
-    ports:
-      - "8081:80"
-    environment:
-      PMA_HOST: MySQL
-      PMA_USER: root
-      PMA_PASSWORD: "123"
-    depends_on:
-      - MySQL
+  # phpmyadmin:
+  #   image: phpmyadmin
+  #   container_name: phpMyAdmin
+  #   restart: always
+  #   ports:
+  #     - "8081:80"
+  #   environment:
+  #     PMA_HOST: MySQL
+  #     PMA_USER: root
+  #     PMA_PASSWORD: "123"
+  #   depends_on:
+  #     - MySQL
 
 volumes:
   mysql-data:
