--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
+# MySQL
 MYSQL_ALLOW_EMPTY_PASSWORD="no"
 MYSQL_ROOT_PASSWORD="123"
 
+# PostgreSQL
 POSTGRES_USER=root
-POSTGRES_PASSWORD="123"
+POSTGRES_PASSWORD="123x"
 
-
+# phpMyAdmin
 PMA_HOST=MySQL
 PMA_USER=root
 PMA_PASSWORD="123"
