--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     restart: always
     ports:
       - 8080:8080
-      - 5000:5000
+      # - 5000:5000
       - 3000:3000
 
   # ubuntu:
@@ -74,35 +74,35 @@ services:
   #     - ./app/php:/var/www/html/
   #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
-  mysql:
-    image: mysql:latest
-    container_name: MySQL
-    restart: always
-    ports:
-      - "3306:3306"
-    volumes:
-      # - ./data/mysql:/var/lib/mysql
-      - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+#   mysql:
+#     image: mysql:latest
+#     container_name: MySQL
+#     restart: always
+#     ports:
+#       - "3306:3306"
+#     volumes:
+#       # - ./data/mysql:/var/lib/mysql
+#       - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
+#     environment:
+#       MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+#       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
 
-  postgres:
-    image: postgres:alpine
-    container_name: PostgreSQL
-    restart: always
-    ports:
-      - "5432:5432"
-    volumes:
-      # - ./data/postgres:/var/lib/postgresql/data
-      - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
-    environment:
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+#   postgres:
+#     image: postgres:alpine
+#     container_name: PostgreSQL
+#     restart: always
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       # - ./data/postgres:/var/lib/postgresql/data
+#       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
+#     environment:
+#       POSTGRES_USER: "${POSTGRES_USER}"
+#       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
 
-volumes:
-  mysql-data:
-  postgres-data:
+# volumes:
+#   mysql-data:
+#   postgres-data:
 
     # git:
     #   image: alpine
