--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,18 +74,18 @@ services:
   #     - ./app/php:/var/www/html/
   #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
-#   mysql:
-#     image: mysql:latest
-#     container_name: MySQL
-#     restart: always
-#     ports:
-#       - "3306:3306"
-#     volumes:
-#       # - ./data/mysql:/var/lib/mysql
-#       - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
-#     environment:
-#       MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-#       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+  mysql:
+    image: mysql:latest
+    container_name: MySQL
+    restart: always
+    ports:
+      - "3306:3306"
+    volumes:
+      # - ./data/mysql:/var/lib/mysql
+      - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
 
 #   postgres:
 #     image: postgres:alpine
@@ -100,9 +100,9 @@ services:
 #       POSTGRES_USER: "${POSTGRES_USER}"
 #       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
 
-# volumes:
-#   mysql-data:
-#   postgres-data:
+volumes:
+  mysql-data:
+  postgres-data:
 
     # git:
     #   image: alpine
