--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,10 @@ services:
       - 8080:8080
       # - 5000:5000
       - 3000:3000
+    volumes:
+      - jenkins-data:/var/jenkins_home
+    depends_on:
+        - MySQL
 
   # ubuntu:
   #   tty: true
@@ -103,6 +107,7 @@ services:
 volumes:
   mysql-data:
   postgres-data:
+  jenkins-data:
 
     # git:
     #   image: alpine
