--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,22 +48,22 @@ services:
     depends_on:
         - MySQL
 
-  # ubuntu:
-  #   tty: true
-  #   container_name: Ubuntu
-  #   restart: always
-  #   build:
-  #     context: ./docker/nginx
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 81:81
-  #     - 3000:3000
-  #     - 3306:3306
-  #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/php:/var/www/html
-  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  ubuntu:
+    tty: true
+    container_name: Ubuntu
+    restart: always
+    build:
+      context: ./docker/ubuntu
+      dockerfile: Dockerfile
+    ports:
+      - 81:81
+      - 3000:3000
+      - 3306:3306
+    volumes:
+      # Serve app folder to the server
+      - ./app/php:/var/www/html
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
   # php:
   #   container_name: PHP-Apache
