--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -2,9 +2,11 @@ FROM ubuntu
 
 # -y to answer "Yes" to all promts
 
-# Provides some useful scripts e.g. add-apt-repository
-# software-properties-common 
-RUN apt update && apt install -y software-properties-common && \
+# "software-properties-common" - provides some useful scripts e.g. add-apt-repository
+
+# "su -" - enables su-mode to install sudo
+
+RUN su - && apt update && apt install -y software-properties-common && \
     # Needed to install latest PHP versions
     add-apt-repository ppa:ondrej/php && \
     \
@@ -15,22 +17,51 @@ RUN apt update && apt install -y software-properties-common && \
     apt install --no-install-recommends -y \
     # apt install -y \
     \
+    \
+    \
+    #==========LINUX==========#
+    curl \
+    sudo \
+    #==========LINUX==========#
+    \
+    \
+    \
     #==========MySQL==========#
     mysql-server \
     #==========MySQL==========#
-    #==========Jenkins==========#
-    # mysql-server \
-    #==========Jenkins==========#
-    #==========Node.js/NVM==========#
-    # mysql-server \
-    #==========Node.js/NVM==========#
     \
-    # Install NGINX
+    \
+    \
+    #==========Jenkins==========#
+    # mysql-server \
+    #==========Jenkins==========#
+    \
+    \
+    \
+    #==========NGINX==========#
     nginx \
+    #==========NGINX==========#
     \
-    # Install PHP and PHP Extensions
+    \
+    \
+    #==========Install PHP & PHP Extensions==========#
     php8.1 \
-    php8.1-fpm
+    php8.1-fpm && \
+    #==========Install PHP & PHP Extensions==========#
+    \
+    \
+    \
+    #==========Node.js/NVM==========#
+    # NODE_VERSION=17.7.0 \
+    # curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash \
+    # export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")" \
+    # [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" \
+    # nvm install $NODE_VERSION \
+    #==========Node.js/NVM==========#
+    \
+    \
+    \
+    echo "Finished"
 
 CMD service php8.1-fpm start && \
     service mysql start && \
