--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,19 +34,19 @@ services:
   # mvn spring-boot:run
   #====================
 
-  jenkins:
-    # 2.347
-    image: jenkins/jenkins:jdk11
-    container_name: Jenkins
-    restart: always
-    ports:
-      - 8080:8080
-      # - 5000:5000
-      - 3000:3000
-    volumes:
-      - jenkins-data:/var/jenkins_home
-    depends_on:
-        - MySQL
+  # jenkins:
+  #   # 2.347
+  #   image: jenkins/jenkins:jdk11
+  #   container_name: Jenkins
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
+  #     # - 5000:5000
+  #     - 3000:3000
+  #   volumes:
+  #     - jenkins-data:/var/jenkins_home
+  #   depends_on:
+  #       - MySQL
 
   ubuntu:
     tty: true
@@ -78,18 +78,18 @@ services:
   #     - ./app/php:/var/www/html/
   #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
-  mysql:
-    image: mysql:latest
-    container_name: MySQL
-    restart: always
-    ports:
-      - "3306:3306"
-    volumes:
-      # - ./data/mysql:/var/lib/mysql
-      - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+  # mysql:
+  #   image: mysql:latest
+  #   container_name: MySQL
+  #   restart: always
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     # - ./data/mysql:/var/lib/mysql
+  #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
+  #   environment:
+  #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+  #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
 
 #   postgres:
 #     image: postgres:alpine
@@ -104,10 +104,10 @@ services:
 #       POSTGRES_USER: "${POSTGRES_USER}"
 #       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
 
-volumes:
-  mysql-data:
-  postgres-data:
-  jenkins-data:
+# volumes:
+#   mysql-data:
+#   postgres-data:
+#   jenkins-data:
 
     # git:
     #   image: alpine
