--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,6 @@
 version: "3.9"
 
 services:
-  # node.js:
-  #   # image: node:alpine
-  #   container_name: Node.js
-  #   restart: always
-  #   build:
-  #     context: ./docker/node.js
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 3000:3000
-  #     - 5000:5000
-  #   volumes:
-  #     - ./app/node.js:/app
-  #   tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
-
-  # Spring Boot
-  # java:
-  #   image: maven:3.8.5-jdk-8
-  #   container_name: Java-Maven
-  #   ports:
-  #     - 8080:8080
-  #   volumes:
-  #     - ./app/java/test:/usr/local/bin
-  #     - ./app/java/test/entrypoint.sh:/usr/local/bin/mvn-entrypoint.sh
-  #
-  #====================
-  # entrypoint.sh
-  # #!/bin/sh
-  # You can set here anything you need before starting the spring boot application
-  # cd /usr/local/bin
-  # mvn install
-  # mvn spring-boot:run
-  #====================
-
   # jenkins:
   #   # 2.347
   #   image: jenkins/jenkins:jdk11
@@ -46,7 +13,7 @@ services:
   #   volumes:
   #     - jenkins-data:/var/jenkins_home
   #   depends_on:
-  #       - MySQL
+  #     - MySQL
 
   ubuntu:
     tty: true
@@ -57,6 +24,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 81:81
+      - 8080:8080
       - 3000:3000
       - 3306:3306
     volumes:
@@ -65,49 +33,43 @@ services:
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
-  # php:
-  #   container_name: PHP-Apache
-  #   restart: always
-  #   build:
-  #     context: ./docker/apache
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 80:80
-  #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/php:/var/www/html/
-  #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+volumes:
+  mysql-data:
+  postgres-data:
+  jenkins-data:
 
-  # mysql:
-  #   image: mysql:latest
-  #   container_name: MySQL
-  #   restart: always
-  #   ports:
-  #     - "3306:3306"
-  #   volumes:
-  #     # - ./data/mysql:/var/lib/mysql
-  #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
-  #   environment:
-  #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-  #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+    # node.js:
+    #   # image: node:alpine
+    #   container_name: Node.js
+    #   restart: always
+    #   build:
+    #     context: ./docker/node.js
+    #     dockerfile: Dockerfile
+    #   ports:
+    #     - 3000:3000
+    #     - 5000:5000
+    #   volumes:
+    #     - ./app/node.js:/app
+    #   tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
 
-#   postgres:
-#     image: postgres:alpine
-#     container_name: PostgreSQL
-#     restart: always
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       # - ./data/postgres:/var/lib/postgresql/data
-#       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
-#     environment:
-#       POSTGRES_USER: "${POSTGRES_USER}"
-#       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-
-# volumes:
-#   mysql-data:
-#   postgres-data:
-#   jenkins-data:
+    # Spring Boot
+    # java:
+    #   image: maven:3.8.5-jdk-8
+    #   container_name: Java-Maven
+    #   ports:
+    #     - 8080:8080
+    #   volumes:
+    #     - ./app/java/test:/usr/local/bin
+    #     - ./app/java/test/entrypoint.sh:/usr/local/bin/mvn-entrypoint.sh
+    #
+    #====================
+    # entrypoint.sh
+    # #!/bin/sh
+    # You can set here anything you need before starting the spring boot application
+    # cd /usr/local/bin
+    # mvn install
+    # mvn spring-boot:run
+    #====================
 
     # git:
     #   image: alpine
@@ -141,3 +103,42 @@ services:
     #     PMA_PASSWORD: "${PMA_PASSWORD}"
     #   depends_on:
     #     - MySQL
+
+    # php:
+    #   container_name: PHP-Apache
+    #   restart: always
+    #   build:
+    #     context: ./docker/apache
+    #     dockerfile: Dockerfile
+    #   ports:
+    #     - 80:80
+    #   volumes:
+    #     # Serve app folder to the server
+    #     - ./app/php:/var/www/html/
+    #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+
+    # mysql:
+    #   image: mysql:latest
+    #   container_name: MySQL
+    #   restart: always
+    #   ports:
+    #     - "3306:3306"
+    #   volumes:
+    #     # - ./data/mysql:/var/lib/mysql
+    #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
+    #   environment:
+    #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+    #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+
+    #   postgres:
+    #     image: postgres:alpine
+    #     container_name: PostgreSQL
+    #     restart: always
+    #     ports:
+    #       - "5432:5432"
+    #     volumes:
+    #       # - ./data/postgres:/var/lib/postgresql/data
+    #       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
+    #     environment:
+    #       POSTGRES_USER: "${POSTGRES_USER}"
+    #       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
