--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -31,9 +31,9 @@ RUN su - && apt update && \
     \
     \
     \
-    #==========MySQL==========#
+    #==========Git==========#
     # git \
-    #==========MySQL==========#
+    #==========Git==========#
     \
     \
     \
