--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,38 @@
 version: "3.9"
 
 services:
-  jenkins:
-    # 2.347
-    image: jenkins/jenkins:jdk11
-    container_name: Jenkins
-    restart: always
-    ports:
-      - 8080:8080
-      # - 5000:5000
-      - 3000:3000
-    volumes:
-      - jenkins-data:/var/jenkins_home
-    depends_on:
-      - MySQL
-
-  # ubuntu:
-  #   tty: true
-  #   container_name: Ubuntu
+  # jenkins:
+  #   # 2.347
+  #   image: jenkins/jenkins:jdk11
+  #   container_name: Jenkins
   #   restart: always
-  #   build:
-  #     context: ./docker/ubuntu
-  #     dockerfile: Dockerfile
   #   ports:
-  #     - 81:81
   #     - 8080:8080
+  #     # - 5000:5000
   #     - 3000:3000
-  #     - 3306:3306
   #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/php:/var/www/html
-  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  #     - jenkins-data:/var/jenkins_home
+  #   depends_on:
+  #     - MySQL
+
+  ubuntu:
+    tty: true
+    container_name: Ubuntu
+    restart: always
+    build:
+      context: ./docker/ubuntu
+      dockerfile: Dockerfile
+    ports:
+      - 81:81
+      - 80:80
+      - 8080:8080
+      - 3000:3000
+      - 3306:3306
+    volumes:
+      # Serve app folder to the server
+      - ./app/php:/var/www/html
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
 volumes:
   mysql-data:
