--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ volumes:
     #====================
     # entrypoint.sh
     # #!/bin/sh
-    # You can set here anything you need before starting the spring boot application
+    # You can set anything you need here before starting the spring boot application
     # cd /usr/local/bin
     # mvn install
     # mvn spring-boot:run
