--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.9"
 
 services:
+
+  python:
+    build:
+      context: ./docker/python
+      dockerfile: Dockerfile
+    container_name: Python
+    restart: always
+    ports:
+      - 8000:8000
+    # volumes:
+    #   - ./app/python:/app
+    tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
   # jenkins:
   #   # 2.347
   #   image: jenkins/jenkins:jdk11
@@ -15,24 +27,24 @@ services:
   #   depends_on:
   #     - MySQL
 
-  ubuntu:
-    tty: true
-    container_name: Ubuntu
-    restart: always
-    build:
-      context: ./docker/ubuntu
-      dockerfile: Dockerfile
-    ports:
-      - 81:81
-      - 80:80
-      - 8080:8080
-      - 3000:3000
-      - 3306:3306
-    volumes:
-      # Serve app folder to the server
-      - ./app/php:/var/www/html
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  # ubuntu:
+  #   tty: true
+  #   container_name: Ubuntu
+  #   restart: always
+  #   build:
+  #     context: ./docker/ubuntu
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 81:81
+  #     - 80:80
+  #     - 8080:8080
+  #     - 3000:3000
+  #     - 3306:3306
+  #   volumes:
+  #     # Serve app folder to the server
+  #     - ./app/php:/var/www/html
+  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
 volumes:
   mysql-data:
