--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@ Docker/postgres
 Docker/mysql
 
 # Ignore all project files
-app/node.js/*
-app/java/*
-app/php/*
-app/python/*
+# app/node.js/*
+# app/java/*
+# app/php/*
+# app/python/*
 
-# app/*
+app/*
 
 # This line should be below the .gitignore file
 # This line preserves the folder structure (allows an empty folder to be uploaded)
