--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3.9"
 
 services:
 
-  python:
-    build:
-      context: ./docker/python
-      dockerfile: Dockerfile
-    container_name: Python
-    restart: always
-    ports:
-      - 8000:8000
-    volumes:
-      - ./app/python:/usr/app/src
+  # python:
+  #   build:
+  #     context: ./docker/python
+  #     dockerfile: Dockerfile
+  #   container_name: Python
+  #   restart: always
+  #   ports:
+  #     - 8000:8000
+  #   volumes:
+  #     - ./app/python:/usr/app/src
   # jenkins:
   #   # 2.347
   #   image: jenkins/jenkins:jdk11
@@ -26,24 +26,24 @@ services:
   #   depends_on:
   #     - MySQL
 
-  # ubuntu:
-  #   tty: true
-  #   container_name: Ubuntu
-  #   restart: always
-  #   build:
-  #     context: ./docker/ubuntu
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 81:81
-  #     - 80:80
-  #     - 8080:8080
-  #     - 3000:3000
-  #     - 3306:3306
-  #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/php:/var/www/html
-  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  ubuntu:
+    tty: true
+    container_name: Ubuntu
+    restart: always
+    build:
+      context: ./docker/ubuntu
+      dockerfile: Dockerfile
+    ports:
+      - 81:81
+      - 80:80 # PHP
+      - 8080:8080 # Java
+      - 3000:3000 # Node.js
+      - 3306:3306 # MySQL
+    volumes:
+      # Serve app folder to the server
+      - ./app/php:/var/www/html
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
 
 volumes:
   mysql-data:
@@ -134,7 +134,7 @@ volumes:
     #   container_name: MySQL
     #   restart: always
     #   ports:
-    #     - "3306:3306"
+    #     - 3306:3306
     #   volumes:
     #     # - ./data/mysql:/var/lib/mysql
     #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
