--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,15 @@ services:
       - ./app/php:/var/www/html
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+    # entrypoint: [ "/bin/sh", "-c" ]
+    # # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
+    # command:
+    #   - |
+    #     export NVM_DIR="$$([ -z "$${XDG_CONFIG_HOME-}" ] && printf %s "$${HOME}/.nvm" || printf %s "$${XDG_CONFIG_HOME}/nvm")"
+    #     [ -s "$$NVM_DIR/nvm.sh" ] && \. "$$NVM_DIR/nvm.sh"
+    #     echo NVM version: $(nvm -v)
+    #     echo Node.js version: $(node -v)
+    #     sleep infinity
 
 volumes:
   mysql-data:
